--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@ button{
 
         <label for="password">Password</label>
         <input type="password" placeholder="Password" id="password" name="pass">
+        <label for="password">Password</label>
+        <input type="password" placeholder="Password" id="password" name="pass">
 
         <button type="submit">Log In</button>
         <!-- <input type="button" value=""> -->
